cleanup: use spaces instead of tabs

--- a/simplex_solver_for_LP/Makefile
+++ b/simplex_solver_for_LP/Makefile
@@ -1,5 +1,5 @@
 All: dummy
 	g++ -g -o simplexSolver solver.cpp simplexSolve.cpp -I .
-	./simplexSolver
+	./simplexSolver problems/problem0.prob
 	
 dummy:
